--- a/trails.css
+++ b/trails.css
@@ -3,6 +3,16 @@
     --spacer: 1rem;
 }
 
+.container-v-flex {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+
+.content-v-flex {
+    flex-grow: 1;
+}
+
 .btn-trail {
     margin: var(--spacer);
     color: #ccc;
@@ -33,5 +43,6 @@
 #map {
     /* configure the size of the map */
     width: 100%;
-    height: 80vh;
+    /*    height: 80vh;
+*/
 }
