--- a/trails.css
+++ b/trails.css
@@ -7,8 +7,16 @@
     max-height: 50vh;
 }
 
+.min-vh-50 {
+    min-height: 50vh;
+}
+
 .max-vh-75 {
     max-height: 75vh;
+}
+
+.min-vh-75 {
+    min-height: 75vh;
 }
 
 .contain {
