--- a/trails.css
+++ b/trails.css
@@ -1,7 +1,14 @@
-
 :root {
     --spacer: 1rem;
+    --bs-border-radius: 0.375rem;
 }
+
+@property --angle {
+    syntax: "<angle>";
+    initial-value: 0deg;
+    inherits: false;
+}
+
 
 .max-vh-50 {
     max-height: 50vh;
@@ -62,9 +69,41 @@
         }
 
 
+        .btn-check:checked + .btn-trail::after, .btn-trail::before {
+            content: '';
+            position: absolute;
+            height: 100%;
+            width: 100%;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%,-50%);
+            z-index: -1;
+            padding: 3px;
+            border-radius: var(--bs-border-radius);
+            background-image: conic-gradient(from var(--angle), #0940c3, transparent, #0940c3);
+            animation: 3s spin linear infinite;
+        }
+
+        .btn-check:checked + .btn-trail::before {
+            filter: blur(1rem);
+            opacity: 0.7;
+        }
+
+
 #map {
     /* configure the size of the map */
     width: 100%;
     /*    height: 80vh;
 */
+}
+
+
+@keyframes spin {
+    from {
+        --angle: 0deg;
+    }
+
+    to {
+        --angle: 360deg;
+    }
 }
